# SoundscapeAgents

./: _Crttr.description.txt
AnalysisRender/: AnalysisBlock.sc  AnalysisChain.sc  AnalysisData.sc  AnalysisRenderController.sc  AnalysisTests.sc  AnalysisView.sc
AnalysisRender/scwork/: 2011_clientcode.rtf  Untitled 3.rtf  cricketsAnalysisSynthTry.scd  loggerstuff.rtf  nrtGA_test1.scd  nrtGA_test2_fft.scd  sample_client_code.rtf  todo.rtf
AnalysisRender/scwork/notes/: dBA_tests_longfiles.rtf  (+1 more)
CrttrMesh/: CMArchive.sc  CrttrMesh.sc  CrttrMeshGui.sc  CrttrMeshLog.sc  CrttrMeshMap.sc  CrttrNode.sc  CrttrNode_examples.scd  CrttrNode_examplesnrt_2.scd  CrttrNode_spec.scd  crrtrmeshlog_debugging.scd  crrtrmeshlog_debugging_v2.scd  crttrmeshlog_examples.rtf
CrttrUgens/: SideToneCancellingUgens-Help.scd  SidetoneCancellingUgens.sc  UgenClassExtensions.sc
CrttrUgens/Phasein/: CMakeCache.txt  CMakeLists.txt  Makefile  PhaseIn1.cpp  PhaseIn1.scx  PhaseInIrm.cpp  PhaseInIrm2.cpp  cmake_install.cmake
CrttrUgens/Phasein/Help-examples/: phaseIn1.scd
CrttrUgens/Phasein/PhaseIn1_sclib/: PhaseIn1.sc  PhaseIn1.scx  PhaseInHelp.scd  PhaseInIrm.scx  PhaseInIrm2.scx
CrttrUgens/irm/: CMakeCache.txt  CMakeLists.txt  IRMUgens.cpp  Makefile  cmake_install.cmake
CrttrUtils/: +Score.sc  PathAllocator.html  PathAllocator.sc
SelfConsciousSpeaker/: SippingTester.sc  StatsUgens.sc  TenmaMeter.sc  synthDefVersion_forPrius.scd  usingSippingTester.scd
SelfConsciousSpeaker/testing_statsugen/: Untitled 3.rtf  Untitled 4.rtf  Untitled 5.rtf
SpectralFlex/: spectral_flex_initialSketch.rtf
(+16 files in other folders)
